2003-09-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/png.c: removed unused "loops_active" variable.

2003-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0.3 released.
	* index.html: Changed version to 1.0.3.
	* NEWS: Updated NEWS to reflect fixes since 1.0.2.
	* version.sh (PACKAGE_RELEASE_DATE): Updated release date to
	today's date.
	* VisualMagick: Incorporate configure/build improvements from the
	1.1 development version. This fixes build dependency problems and
	supports building the coders as a static library to improve build
	times.

2003-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Ensure that the reported image
	magic string is that of the user-specified input file rather than
	a temporary file prepared by an external delegate program.

2003-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (BlobToImage): Skip calling SetImageInfo() if
	magick is already set.

2003-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Rewind file descriptor so that first
	read is at zero offset. This fixes reading GIFs via a
	user-provided file handle.

2003-08-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/clipboard.c, coders/emf.c, coders/tiff.c, coders/wmf.c,
	coders/xcf.c, coders/xtrn.c, magick/magick.c, magick/nt_base.c,
	magick/resource.c: Use traditional C comments in C source files.

2003-07-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/programming.html: Update Rmagick URL.

2003-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec: Added RPM spec file authored by Troy
	Edwards <vallimar@sexorcisto.net>.
	* magick/attribute.c (GenerateEXIFAttribute): Look for the profile
	name "EXIF" rather than "APP1".

2003-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogMagickEvent): Unlock semaphore before
	returning.
