@@ -9,6 +9,6 @@
 #endif
 
 #define public MagickPackageName "GraphicsMagick"
-#define public MagickPackageVersion "1.0.3"
+#define public MagickPackageVersion "1.0.4"
 #define public MagickPackageVersionAddendum ""
-#define public MagickPackageReleaseDate "08/23/03"
+#define public MagickPackageReleaseDate "unreleased"
